Upgrade to Angular 7

--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -2,13 +2,12 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
-    "module": "es2015",
     "types": [
       "openlayers"
     ]
   },
   "exclude": [
-    "src/test.ts",
+    "test.ts",
     "**/*.spec.ts"
   ]
 }
