--- a/angular.json
+++ b/angular.json
@@ -85,7 +85,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/openlayers/dist/ol.js"
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
