--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
     "document-register-element": "1.8.1",
+    "openlayers": "4.6.5",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
